<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/collegeName"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/college_name"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/collegeMail"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/college_email_id"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="213dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/branch"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <EditText
        android:id="@+id/batch"
        android:layout_width="168dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/batch"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="211dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/password"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.640" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:text="SIGN UP"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="134dp"
        android:layout_height="65dp"
        android:text="LOGIN"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />
</androidx.constraintlayout.widget.ConstraintLayout>